gen/oauth/v2/cargo-errors.log
    Checking google-oauth2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/oauth/v2/lib)
error[E0412]: cannot find type `GetCertForOpenIdConnectRequestBuilder` in this scope
   --> oauth/v2/lib/src/lib.rs:241:51
    |
241 |     pub fn get_cert_for_open_id_connect(&self) -> GetCertForOpenIdConnectRequestBuilder<A> {
    |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
    |
1   | use crate::resources::GetCertForOpenIdConnectRequestBuilder;
    |

error[E0422]: cannot find struct, variant or union type `GetCertForOpenIdConnectRequestBuilder` in this scope
   --> oauth/v2/lib/src/lib.rs:242:9
    |
242 |         GetCertForOpenIdConnectRequestBuilder {
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
    |
1   | use crate::resources::GetCertForOpenIdConnectRequestBuilder;
    |

error[E0412]: cannot find type `TokeninfoRequestBuilder` in this scope
   --> oauth/v2/lib/src/lib.rs:255:32
    |
255 |     pub fn tokeninfo(&self) -> TokeninfoRequestBuilder<A> {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
    |
1   | use crate::resources::TokeninfoRequestBuilder;
    |

error[E0422]: cannot find struct, variant or union type `TokeninfoRequestBuilder` in this scope
   --> oauth/v2/lib/src/lib.rs:256:9
    |
256 |         TokeninfoRequestBuilder {
    |         ^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
    |
1   | use crate::resources::TokeninfoRequestBuilder;
    |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0412, E0422.
For more information about an error, try `rustc --explain E0412`.
error: Could not compile `google-oauth2`.

To learn more, run the command again with --verbose.
